feat: :sparkles: add info cities route
