# api/src/routes/companyRoute.js
@@ -6,7 +6,7 @@ const CompanyController = require('../controllers/CompanyController');
 const router = Router();
 
 router
-	.get('/company', signInAuthMiddleware, roleMiddleware(['Master']), CompanyController.getCompany)
+	.get('/company', signInAuthMiddleware, roleMiddleware(['Master']), CompanyController.listCompany)
 	.put('/company/apikey/new', signInAuthMiddleware, roleMiddleware(['Master']), CompanyController.newApiKey);
 
 module.exports = router;
